Testing jwt authorization
